--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "fzaninotto/faker": "^1.8",
+        "ramsey/uuid": "^3.8",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/console": "4.1.*",
         "symfony/flex": "^1.1",
@@ -16,6 +18,7 @@
     "require-dev": {
         "symfony/dotenv": "4.1.*",
         "symfony/maker-bundle": "^1.9",
+        "symfony/phpunit-bridge": "4.1.*",
         "symfony/web-server-bundle": "4.1.*"
     },
     "config": {
