--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,16 @@
     "php": "^7.2.0",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "ext-json": "*",
     "fzaninotto/faker": "^1.8",
     "ramsey/uuid": "^3.8",
+    "ramsey/uuid-doctrine": "^1.5",
     "sensio/framework-extra-bundle": "^5.2",
     "symfony/console": "4.1.*",
     "symfony/dependency-injection": "4.1.*",
     "symfony/flex": "^1.1",
     "symfony/framework-bundle": "4.1.*",
+    "symfony/http-foundation": "4.1.*",
     "symfony/maker-bundle": "^1.9",
     "symfony/orm-pack": "^1.0",
     "symfony/twig-bundle": "4.1.*",
