--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
     "symfony/yaml": "4.1.*"
   },
   "require-dev": {
+    "doctrine/doctrine-fixtures-bundle": "^3.0",
+    "symfony/browser-kit": "4.1.*",
     "symfony/dotenv": "4.1.*",
     "symfony/phpunit-bridge": "4.1.*",
     "symfony/web-server-bundle": "4.1.*"
