--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,10 +5,16 @@
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/6.5/phpunit.xsd"
          backupGlobals="false"
          colors="true"
-         bootstrap="vendor/autoload.php"
+         bootstrap="tests/bootstrap.php"
 >
     <php>
         <ini name="error_reporting" value="-1"/>
+        <env name="APP_ENV" value="test" force="true"/>
+        <env name="BASE_URL" value="http://localhost:8000" />
+        <env name="DATABASE_URL" value="mysql://mikhail:abm2508m@127.0.0.1:3306/basket_test" />
+        <env name="BOOTSTRAP_RESET_DATABASE" value="0" />
+        <env name="KERNEL_CLASS" value="App\Kernel" />
+
     </php>
 
     <testsuites>
