migrate to mongodb

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@
 # Use real environment variables when deploying to production.
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 DATABASE_URL="mysql://mikhail:abm2508m@127.0.0.1:3306/basket"
+###> doctrine/mongodb-odm-bundle ###
+MONGODB_URL=mongodb://localhost:27017
+MONGODB_DB=basket
+###< doctrine/mongodb-odm-bundle ###
