--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "ext-ctype": "*",
     "ext-iconv": "*",
     "ext-json": "*",
+    "alcaeus/mongo-php-adapter": "^1.1",
+    "doctrine/mongodb-odm-bundle": "^3.5",
     "fzaninotto/faker": "^1.8",
     "ramsey/uuid": "^3.8",
     "ramsey/uuid-doctrine": "^1.5",
