--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,5 @@ APP_SECRET='s$cretf0rt3st'
 SHELL_VERBOSITY=-1
 SYMFONY_DEPRECATIONS_HELPER=999999
 SYMFONY_PHPUNIT_VERSION=6.5
+MONGODB_URL=mongodb://localhost:27017
+MONGODB_DB=basket_test
