--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,7 +14,8 @@
         <env name="DATABASE_URL" value="mysql://mikhail:abm2508m@127.0.0.1:3306/basket_test" />
         <env name="BOOTSTRAP_RESET_DATABASE" value="1" />
         <env name="KERNEL_CLASS" value="App\Kernel" />
-
+        <env name="MONGODB_URL" value="mongodb://localhost:27017" />
+        <env name="MONGODB_DB" value="basket_test" />
     </php>
 
     <testsuites>
