--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,9 +29,9 @@ services:
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
 
-  #App\Domain\BasketRepositoryContract:
-  #  class: App\Infrastructure\DoctrineBasketMongoRepository
-  #  autowire: true
+  App\Domain\Basket\BasketRepositoryContract:
+    class: App\Infrastructure\DoctrineBasketMongoRepository
+    autowire: true
 
   App\Http\Listeners\JsonRequestListener:
     tags:
